code/human_written_tests/WebAssembly/processed_control_flow_validation/test_block_43.wast
(assert_invalid
  (module (func $type-value-f32-vs-f64 (result f32)
    (block (result f32) (f64.const 0.0))
  ))
  "type mismatch"
)